[package]
name = "pvar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "benchmarks"
harness = false
