[package]
name = "pvar"
version = "0.1.0"
edition = "2021"

[lib]
name = "pvar"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3.5"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
